# Metadata_and_Steganogrphy

./: README.md
exif_tamper/: .gitignore  Cargo.toml  Dioxus.toml  README.md
exif_tamper/assets/: main.css  tailwind.css
exif_tamper/src/: main.rs
exif_tamper/src/dioxus_components/: mod.rs
exif_tamper/src/dioxus_components/main_handler/: handler.rs
exif_tamper/src/dioxus_components/pub_components/: mod.rs  req_ui.rs  upload_file.rs  user_req.rs
exif_tamper/src/dioxus_components/pub_messages/: fail.rs  mod.rs  pending.rs  status_message_handling.rs  success.rs
exif_tamper/src/dioxus_components/steganography/: extract.rs  get_info.rs  hide.rs  mod.rs
exif_tamper/src/hide_msg_in_img/: decode.rs  encode.rs  hex_convertion.rs  mod.rs  read_file_name.rs  write_on_file.rs
exif_tamper/src/read_n_delete/: delete.rs  get_file_ext.rs  mod.rs  process.rs  random.rs  read.rs
