[package]
name = "exif_tamper"
version = "0.3.0"
authors = ["KiyarashJ <Kj.Programming415@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhide = "0.12.0"
bytes = "1.11.0"
chrono = "0.4.42"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-timer = "0.5.0"
exiftool = "0.3.1"
hex = "0.4.3"
metastrip = "0.1.0"
rand = "0.9.2"
rayon = "1.11.0"
tokio = { version = "1.48.0", features = ["rt", "time", "macros"] }
x25519-dalek = "2.0.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
